vemo-app/main/default/objects/Opportunity/fields/LossReasonText__c.field-meta.xml
<CustomField>
    <fullName>LossReasonText__c</fullName>
    <label>Loss Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>