vemo-app/main/default/objects/Opportunity/fields/ProgramOutline__c.field-meta.xml
<CustomField>
    <fullName>ProgramOutline__c</fullName>
    <label>Program Outline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>