vemo-app/main/default/objects/Opportunity/fields/TargetLaunchDate__c.field-meta.xml
<CustomField>
    <fullName>TargetLaunchDate__c</fullName>
    <label>Target Launch Date</label>
    <type>Date</type>
</CustomField>