vemo-app/main/default/objects/Opportunity/fields/VemoProducts__c.field-meta.xml
<CustomField>
    <fullName>VemoProducts__c</fullName>
    <label>Vemo Product(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VemoProductsServices</valueSetName>
    </valueSet>
</CustomField>