vemo-app/main/default/objects/Opportunity/validationRules/requireAmountOnDecision.validationRule-meta.xml
<ValidationRule>
    <fullName>requireAmountOnDecision</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.GlobalSettings__c.ValidationRules__c &amp;&amp;
isPickVal( StageName , "Decision") &amp;&amp;
ISBLANK( Amount)</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>This field is required at this stage</errorMessage>
</ValidationRule>