vemo-app/main/default/objects/Opportunity/validationRules/requireProgramOutlineOnDecision.validationRule-meta.xml
<ValidationRule>
    <fullName>requireProgramOutlineOnDecision</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.GlobalSettings__c.ValidationRules__c &amp;&amp;
 ISPICKVAL( StageName , "Decision") &amp;&amp;  ISBLANK(  ProgramOutline__c )</errorConditionFormula>
    <errorDisplayField>ProgramOutline__c</errorDisplayField>
    <errorMessage>This field is required at this stage</errorMessage>
</ValidationRule>