vemo-app/main/default/objects/Opportunity/validationRules/requireTargetLaunchDateOnDecision.validationRule-meta.xml
<ValidationRule>
    <fullName>requireTargetLaunchDateOnDecision</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.GlobalSettings__c.ValidationRules__c &amp;&amp;
isPickVal( StageName , "Decision") &amp;&amp;
ISBLANK(  TargetLaunchDate__c )</errorConditionFormula>
    <errorDisplayField>TargetLaunchDate__c</errorDisplayField>
    <errorMessage>This field is required at this stage</errorMessage>
</ValidationRule>