vemo-app/main/default/objects/Opportunity/validationRules/requireVemoProductsOnSolutionDesign.validationRule-meta.xml
<ValidationRule>
    <fullName>requireVemoProductsOnSolutionDesign</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.GlobalSettings__c.ValidationRules__c &amp;&amp;
 ISPICKVAL( StageName , "Solution Design") &amp;&amp;  ISBLANK( VemoProducts__c )</errorConditionFormula>
    <errorDisplayField>VemoProducts__c</errorDisplayField>
    <errorMessage>This field is required at this stage</errorMessage>
</ValidationRule>