vemo-app/main/default/objects/Opportunity/listViews/MyOpportunities.listView-meta.xml
<ListView>
    <fullName>MyOpportunities</fullName>
    <filterScope>Mine</filterScope>
    <label>My Opportunities</label>
</ListView>